--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,9 +23,9 @@
   }
 
   .hero-texto {
-    padding: 0;
-    align-items: center;
-  }
+  padding: 0;
+  text-align: left;
+}
 
   .hero-logo {
     max-width: 300px;
